remove solution (they are in their own branch now)

--- a/exercise9.ipynb
+++ b/exercise9.ipynb
@@ -114,12 +114,8 @@
    "source": [
     "class FCFS(Scheduler):\n",
     "    def update(self, new_tasks):\n",
-    "        # new tasks arrived\n",
-    "        if len(new_tasks) != 0:\n",
-    "            self.tasks_active += new_tasks\n",
-    "\n",
-    "        if self.current_task is None and len(self.tasks_active) > 0:\n",
-    "            self.current_task = self.tasks_active[0]\n",
+    "        # insert your solution and remove \"pass\" line\n",
+    "        pass\n",
     "\n",
     "\n",
     "scheduler = FCFS()\n",
@@ -153,13 +149,9 @@
    "source": [
     "class SJF(Scheduler):\n",
     "    def update(self, new_tasks):\n",
-    "        # some tasks are new, just append them\n",
-    "        if len(new_tasks) != 0:\n",
-    "            self.tasks_active += new_tasks\n",
-    "            self.tasks_active.sort(key=lambda task: task.duration)\n",
+    "        # insert your solution and remove \"pass\" line\n",
+    "        pass\n",
     "\n",
-    "        if self.current_task is None and len(self.tasks_active) > 0:\n",
-    "            self.current_task = self.tasks_active[0]\n",
     "\n",
     "\n",
     "scheduler = SJF()\n",
@@ -193,14 +185,8 @@
    "source": [
     "class SRTN(Scheduler):\n",
     "    def update(self, new_tasks) -> Task:\n",
-    "        # some tasks are new, just append them\n",
-    "        if len(new_tasks) != 0:\n",
-    "            self.tasks_active += new_tasks\n",
-    "            self.tasks_active.sort(key=lambda task: task.duration)\n",
-    "\n",
-    "        if len(self.tasks_active) > 0:\n",
-    "            self.current_task = self.tasks_active[0]\n",
-    "\n",
+    "        # insert your solution and remove \"pass\" line\n",
+    "        pass\n",
     "\n",
     "scheduler = SRTN()\n",
     "srtn_schedule = scheduler.schedule(task_list)\n",
@@ -233,13 +219,8 @@
    "source": [
     "class Priority(Scheduler):\n",
     "    def update(self, new_tasks):\n",
-    "        if len(new_tasks) != 0:\n",
-    "            self.tasks_active += new_tasks\n",
-    "            self.tasks_active.sort(key=lambda task: -task.priority)\n",
-    "\n",
-    "        if len(self.tasks_active) > 0:\n",
-    "            self.current_task = self.tasks_active[0]\n",
-    "\n",
+    "        # insert your solution and remove \"pass\" line\n",
+    "        pass\n",
     "\n",
     "scheduler = Priority()\n",
     "prio_schedule = scheduler.schedule(task_list)\n",
@@ -348,70 +329,7 @@
     }
    ],
    "source": [
-    "def response_time_for_task(schedule, task):\n",
-    "    slices = schedule[task.id]\n",
-    "\n",
-    "    # slices[-1][1] gets the end of the last slice\n",
-    "    return slices[-1][1] - task.release\n",
-    "\n",
-    "\n",
-    "def waiting_time_for_task(schedule, task):\n",
-    "    slices = schedule[task.id]\n",
-    "    return slices[-1][1] - task.release - task.duration\n",
-    "\n",
-    "\n",
-    "def cpu_utilization(schedule):\n",
-    "    all_slices = list()\n",
-    "    for task in schedule.values():\n",
-    "        # if the task was suspended, it was processed in more than one slice\n",
-    "        if isinstance(task, list):\n",
-    "            for slice in task:\n",
-    "                all_slices.append(slice)\n",
-    "        else:\n",
-    "            all_slices.append(task)\n",
-    "\n",
-    "    all_slices.sort(key=lambda time: time[0])  # sort by start time\n",
-    "\n",
-    "    # add up all time that was skipped\n",
-    "    sum_skipped = 0\n",
-    "    for i, _ in enumerate(all_slices[1:]):\n",
-    "        start = all_slices[i][0]\n",
-    "        prev_end = all_slices[i - 1][1]\n",
-    "        if start > prev_end:\n",
-    "            sum_skipped += start - prev_end\n",
-    "\n",
-    "    total_time = all_slices[-1][1] - all_slices[0][0]\n",
-    "    return 1 - (sum_skipped / total_time)\n",
-    "\n",
-    "\n",
-    "print(f\"{cpu_utilization(fcfs_schedule)}\")\n",
-    "print(f\"{cpu_utilization(sjf_schedule)}\")\n",
-    "print(f\"{cpu_utilization(srtn_schedule)}\")\n",
-    "print(f\"{cpu_utilization(prio_schedule)}\")\n",
-    "\n",
-    "\n",
-    "for schedule in [fcfs_schedule, sjf_schedule, srtn_schedule, prio_schedule]:\n",
-    "    print(\"-----------------------------------\")\n",
-    "    print(\"Response Time:\")\n",
-    "    sum_response_time = 0\n",
-    "    # reversal is just so it is printed like in the solution\n",
-    "    for task in reversed(task_list):\n",
-    "        response_time = response_time_for_task(schedule, task)\n",
-    "        sum_response_time += response_time\n",
-    "        print(f\"{task.id}: {response_time}\")\n",
-    "    avg_response_time = sum_response_time / 6\n",
-    "    print(f\"average: {avg_response_time}\")\n",
-    "    print(\"\\n\")\n",
-    "\n",
-    "    print(\"Flow Time:\")\n",
-    "    sum_flow_time = 0\n",
-    "    # reversal is just so it is printed like in the solution\n",
-    "    for task in reversed(task_list):\n",
-    "        flow_time = waiting_time_for_task(schedule, task)\n",
-    "        sum_flow_time += flow_time\n",
-    "        print(f\"{task.id}: {flow_time}\")\n",
-    "    avg_flow_time = sum_flow_time / 6\n",
-    "    print(f\"average: {avg_flow_time}\")"
+    "# insert your solution and remove \"pass\" line\n"
    ]
   },
   {
