update text in blank code cell

--- a/exercise9.ipynb
+++ b/exercise9.ipynb
@@ -190,7 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# insert your solution and remove \"pass\" line\n"
+    "# insert your solution\n"
    ]
   },
   {
